GUI: info-panel hover parity + visible scrollbars (#376) (#386)
Closes #376.

Maintainer decision (2026-08-14, issue #376) reverses the two GUI
deviations this repo had recorded in javadoc — `InfoPanel.java:24-27`
and `SideInventoryPanel.java:28-32`, both of which said the visible
scrollbar was traded for plain wheel scrolling. Both javadoc records now
cite this decision instead. The wheel still works everywhere it did.

## Upstream citations

Clone `~/development/minecraft/references/tinkers-1.12` @
`c01173c0408352c50a2e8c5017552323ce42f5b4` (MIT).

| Upstream | What was ported |
| --- | --- |
| `GuiInfoPanel.java:47-52,57` | The slider sprites in `panel.png` — 3x5
knob at (0,83), 3x8 bar at (0,88), 3x4 caps at (3,88)/(3,92) |
| `GuiInfoPanel.java:101-102` | Slider geometry: `guiRight() - border.w
- 2`, `guiTop + border.h + 12`, `ySize - border.h*2 - 2 - 12` tall.
`border.w`/`border.h` are 7 here — `GuiWidgetBorder`'s field
initialisers off the *generic* border, which `GuiInfoPanel` never
reassigns. That is the same quirk `WRAP_INSET` already records |
| `GuiInfoPanel.java:165-188` | Shown exactly on overflow, hidden
otherwise; `getTotalLines`' `slider.width + 3` narrowing of the wrap |
| `GuiInfoPanel.java:214-224` | `wood()`/`metal()` shift the slider
column by 6/12px — now `Style.sliderU`, separate from the frame's own
grid shift |
| `GuiInfoPanel.java:372-373` | Drawn last, over the text |
| `GuiInfoPanel.java:331-333` + `:257-262` | The grey `?` in the
top-right corner while some line has hover text, and its hover
(`gui.general.hover`) |
| `GuiInfoPanel.java:119-141` + `:264-315` | Per-line tooltips,
upstream's `tips` list indexed in lockstep with the text list |
| `GuiPartBuilder.java:198-230` | Underlined stat-group headings with a
spacer between groups, every stat row hoverable with
`getLocalizedDesc()`, traits one hoverable line each |
| `GuiToolStation.java:250-251` | Trait/modifier rows as one line with
the description as that row's tooltip |
| `GuiSideI